WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153878
Fix the !ENABLE(NETSCAPE_PLUGIN_API) build after
r196053
https://bugs.webkit.org/show_bug.cgi?id=153878
Summary
Fix the !ENABLE(NETSCAPE_PLUGIN_API) build after r196053
Csaba Osztrogonác
Reported
2016-02-04 11:32:59 PST
build log: In file included from ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:28:0: ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:39:59: error: expected class-name before '{' token ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:42:40: error: 'Display' has not been declared ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:49:13: error: 'NPWindowType' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:51:13: error: 'NPSetWindowCallbackStruct' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:54:33: error: 'WebCore::GraphicsContext' has not been declared ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:54:66: error: 'IntRect' in namespace 'WebCore' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:55:41: error: 'WebMouseEvent' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:56:41: error: 'WebWheelEvent' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:57:46: error: 'WebMouseEvent' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:58:46: error: 'WebMouseEvent' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:59:44: error: 'WebKeyboardEvent' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:63:5: error: 'Display' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:65:5: error: 'NPSetWindowCallbackStruct' does not name a type ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:50:19: error: 'virtual void* WebKit::NetscapePluginX11::window() const' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:52:18: error: 'virtual void WebKit::NetscapePluginX11::geometryDidChange()' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:53:18: error: 'virtual void WebKit::NetscapePluginX11::visibilityDidChange()' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:54:18: error: 'virtual void WebKit::NetscapePluginX11::paint(int&, const int&)' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:55:18: error: 'virtual bool WebKit::NetscapePluginX11::handleMouseEvent(const int&)' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:56:18: error: 'virtual bool WebKit::NetscapePluginX11::handleWheelEvent(const int&)' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:57:18: error: 'virtual bool WebKit::NetscapePluginX11::handleMouseEnterEvent(const int&)' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:58:18: error: 'virtual bool WebKit::NetscapePluginX11::handleMouseLeaveEvent(const int&)' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:59:18: error: 'virtual bool WebKit::NetscapePluginX11::handleKeyboardEvent(const int&)' marked override, but does not override ../../Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:60:18: error: 'virtual void WebKit::NetscapePluginX11::setFocus(bool)' marked override, but does not override ICECC[12723] 20:26:07: Compiled on 10.6.1.14
Attachments
Patch
(1.42 KB, patch)
2016-02-04 11:34 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-02-04 11:34:32 PST
Created
attachment 270675
[details]
Patch
WebKit Commit Bot
Comment 2
2016-02-04 12:06:29 PST
Comment on
attachment 270675
[details]
Patch Clearing flags on attachment: 270675 Committed
r196138
: <
http://trac.webkit.org/changeset/196138
>
WebKit Commit Bot
Comment 3
2016-02-04 12:06:34 PST
All reviewed patches have been landed. Closing bug.
Carlos Garcia Campos
Comment 4
2016-02-04 22:52:55 PST
Sorry about this, thanks for fixing it Ossy.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug