Fix the !ENABLE(NETSCAPE_PLUGIN_API) build after r196053 https://bugs.webkit.org/show_bug.cgi?id=153878

Unreviewed buildfix.


* WebProcess/Plugins/Netscape/x11/NetscapePluginX11.h:


Canonical link: https://commits.webkit.org/171980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196138 268f45cc-cd09-0410-ab3c-d52691b4dbfc